--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no user-scalable=no ">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script-->
     <title>Login</title>
 </head>
 <body>
@@ -17,34 +13,9 @@
     <header>
 
     </header>
-    <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand navbar-logo" href="#"><img src="assets/img/logo_edu.jpg" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Acceuil <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Inscription</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="my-form-element mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav-->
-
       <nav>
         <div class="navbar-nav-side">
-            <a class="navbar-brand navbar-logo" href="#"><img src="assets/img/logo_edu.jpg" alt=""></a>
+            <a class="navbar-brand navbar-logo" href="#"><img src="https://edusys.ulbu.bi/theme/logo_edu.jpg" alt=""></a>
             <ul class="navbar-nav">
                 <li class="nav-menu">
                     <a href="#" class="nav-link active"> Acceuil </a>
@@ -78,7 +49,7 @@
                     <span>EDUSYS</span>
                 </div>
                 <div class="page-adress">
-                        <img src="assets/img/world.png" alt="">
+                        <img src="https://edusys.ulbu.bi/assets/images/world.png" alt="">
                         <span>edusys.ulbu.bi</span>
                 </div>
                 
@@ -86,7 +57,7 @@
             <div class=" login-form">
                 <div class="my-container form-container">
                     <form action="#" method="post">
-                        <img id="icon-pres" src="assets/img/icon_pres1.png"  alt="icon_pres1">
+                        <img id="icon-pres" src="https://edusys.ulbu.bi/assets/images/icon_pres1.png"  alt="icon_pres1">
                         <span class="title">Identification</span>
                         <div class="my-form-element form-input">
                             <span class="material-icons">
@@ -112,7 +83,7 @@
         </div>
     </main>
     <div class="contact">
-        <img class="banner" src="assets/img/gross_line_2.jpg" alt="gross_line_2">
+        <img class="banner" src="https://edusys.ulbu.bi/assets/images/gross_line_2.jpg" alt="gross_line_2">
     </div>
     <footer>
         <div class="footer-content">
