--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"-->
     <script src="assets/js/script.js" defer></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Login</title>
+    <title>MY ULBU</title>
 </head>
 <body>
 
